--- a/server/public/style.css
+++ b/server/public/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  overflow: hidden !important;
+}
+
 body {
   /* display: flex; */
   justify-content: flex-start;
@@ -11,14 +15,15 @@ body {
   min-height: 100vh;
   margin: 0;
   background-color: #f1f1f1;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .sidebar {
   position: fixed;
   top: 0;
   right: 0;
-  height: 100vh;
+  overflow-y: auto;
+  min-height: 100vh;
   width: 30%;
   background-color: #ffffff;
   display: flex;
@@ -31,6 +36,7 @@ body {
 
 .file-container {
   overflow-y: auto;
+  max-height: 300px;
 }
 
 .sidebar button {
@@ -282,6 +288,8 @@ img {
   max-height: 400px;
   overflow-y: scroll;
   display: none;
+  /* z-index: 999;
+  position: relative; */
 }
 
 .shirt-size-menu h1 {
@@ -425,9 +433,30 @@ img {
 }
 
 @media (max-width: 1050px) {
+  .labels-div {
+    position: absolute;
+    top: -277px;
+    background: silver;
+    left: 0;
+    right: 0;
+  }
+
+  #fontsize-label {
+    margin-top: 1em;
+  }
+  #fontFamilySelect {
+    margin-bottom: 1em;
+  }
+
+  html {
+    overflow-y: scroll !important;
+  }
+
   body {
-    overflow: hidden;
+    overflow-x: hidden;
+    /* overflow-y: auto !important; */
     background-color: white;
+    /* height: 200vh; */
   }
 
   .canvas-container {
@@ -438,21 +467,26 @@ img {
   .canvas-div {
     margin: 0 auto;
     width: 786px;
-    height: auto;
+    height: 517px;
+    overflow: hidden;
     scale: 1;
   }
 
+  #text-preview {
+    display: none !important;
+  }
   .button-div {
     width: 100%;
   }
 
   .sidebar {
-    position: absolute;
+    position: relative;
     width: 100%;
-    top: unset;
+    top: 3em;
     bottom: 0;
     height: auto;
     background: transparent;
+    min-height: auto;
   }
 
   .shirt-modification-div {
@@ -470,11 +504,11 @@ img {
     height: 517px;
   }
 
-  .file-container,
+  /* .file-container,
   .text-container,
   #text-preview {
     display: none !important;
-  }
+  } */
 }
 
 @media (max-width: 700px) {
@@ -489,6 +523,40 @@ img {
   .canvas-container {
     left: 154px;
     top: 155px;
+  }
+
+  .button-div {
+    bottom: 210px;
+    top: unset;
+    z-index: 1;
+    position: absolute;
+  }
+
+  .select-shirt-color-div {
+    position: absolute;
+    background: white;
+    top: -132px;
+  }
+
+  .sidebar {
+    position: relative;
+    margin-top: 3em;
+    top: 0;
+  }
+
+  .labels-div {
+    position: static;
+    margin: 0;
+    margin-bottom: 2em;
+  }
+
+  .select-shirt-color-div {
+    position: static;
+  }
+
+  .shirt-size-menu {
+    max-height: 100%;
+    overflow-y: hidden;
   }
 }
 
