--- a/server/public/style.css
+++ b/server/public/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Public Sans", sans-serif;
 }
 
 html {
@@ -56,7 +57,12 @@ button {
 button:hover {
   background-color: #e0e0e0;
 }
-
+#holaBtn {
+  background-color: #9fa3a9;
+}
+.front-back-btn {
+  border: 2px solid #000;
+}
 canvas {
   border: 2px dashed black;
   width: 290px !important;
