--- a/server/public/style.css
+++ b/server/public/style.css
@@ -453,7 +453,7 @@ img {
   padding: 1em;
   min-width: 340px;
   max-width: 340px;
-  min-height: 100dvh;
+  height: 100dvh;
   overflow-y: auto;
 }
 
